--- a/01_Project/index.html
+++ b/01_Project/index.html
@@ -6,18 +6,19 @@
     <link rel="stylesheet" href="style.css" />
     <title>JavaScript Background Color Switcher</title>
 </head>
-<body>
+<body style="background-color: #212121; color: #fff;">
     <div class="canvas">
         <h1>Color Scheme Switcher</h1>
-        <span class="button" id="grey"></span>
+        <span class="button" id="skyblue"></span>
         <span class="button" id="yellow"></span>
         <span class="button" id="pink"></span>
-        <span class="button" id="black"></span>
+        <span class="button" id="orange"></span>
         <h2>
             Try clicking on one of the colors above
             <span>to change the background color of this page!</span>
           </h2>
     </div>
 </body>
-<script src="script.js"></script>
+<!-- <script src="script_if.js"></script> -->
+<script src="script_if.js"></script>
 </html>
